# cas-practic

./: README.md  pyproject.toml
cas_practic/: churn_predict_app.py  churn_predict_service.py
models/: churn-model.pck
notebooks/: client.ipynb  prova.ipynb
