[tool.poetry]
name = "cas-practic"
version = "0.1.0"
description = ""
authors = ["Nando De Lucas Comino <131283440+DeLu4K@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scikit-learn = "^1.6.0"
pandas = "^2.2.3"
ipykernel = "^6.29.5"
flask = "^3.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
